COMP: Add global option allowing to skip install of CLI shared library
Option is named "SlicerExecutionModel_NO_INSTALL_CLI_SHARED_LIBRARIES", if
not already set, its value will default to "FALSE".

If set to False, it means that CLI shared library will be installed. This
reveals to be particularly useful when generating MacOSX bundle where
library are automatically copied using the fixup mechanism.

See http://www.na-mic.org/Bug/view.php?id=3051

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,13 @@ if(NOT DEFINED SlicerExecutionModel_DEFAULT_CLI_LIBRARY_WRAPPER_CXX)
 endif()
 
 #-----------------------------------------------------------------------------
+# Define if CLI shared library should be installed by default.
+#-----------------------------------------------------------------------------
+if(NOT DEFINED SlicerExecutionModel_DEFAULT_NO_INSTALL_CLI_SHARED_LIBRARIES)
+  set(SlicerExecutionModel_DEFAULT_NO_INSTALL_CLI_SHARED_LIBRARIES FALSE)
+endif()
+
+#-----------------------------------------------------------------------------
 # Testing
 #-----------------------------------------------------------------------------
 include(CTest)
