COMP: Update GenerateCLP and ModuleDescriptionParser to use ITKv4
This commit explicitly specifies the list of components to link with. For
convenience, it also exports (in the config file) a variable
ModuleDescriptionParser_ITK_COMPONENTS allowing dependent library in other
project to find ITK specifying these components and include them in the
list of target libraries.

Additionally, since ModuleDescriptionParser does NOT have a proper
config file (this will be fixed at a later time), the GenerateCLP USE_FILE
is updated to import the targets expected by ModuleDescriptionParser.

--- a/GenerateCLP/CMakeLists.txt
+++ b/GenerateCLP/CMakeLists.txt
@@ -35,7 +35,14 @@ include(${ModuleDescriptionParser_USE_FILE})
 find_package(TCLAP REQUIRED)
 include(${TCLAP_USE_FILE})
 
-find_package(ITK REQUIRED)
+#
+# ITK
+#
+set(${PROJECT_NAME}_ITK_COMPONENTS
+  ${ModuleDescriptionParser_ITK_COMPONENTS}
+  )
+find_package(ITK 4.5 COMPONENTS ${${PROJECT_NAME}_ITK_COMPONENTS} REQUIRED)
+set(ITK_NO_IO_FACTORY_REGISTER_MANAGER 1) # See Slicer/Libs/ITKFactoryRegistration/CMakeLists.txt
 include(${ITK_USE_FILE})
 
 # --------------------------------------------------------------------------
@@ -116,8 +123,8 @@ target_link_libraries(${executable_name}
   # shared libs.
   ${ParameterSerializer_LIBRARIES}
   ModuleDescriptionParser
-  itksys
-  ITKEXPAT)
+  ${ITK_LIBRARIES}
+  )
 
 # --------------------------------------------------------------------------
 # Install executable
