--- a/ModuleDescriptionParser/ModuleDescriptionParserConfig.cmake.in
+++ b/ModuleDescriptionParser/ModuleDescriptionParserConfig.cmake.in
@@ -11,6 +11,8 @@ set(ModuleDescriptionParser_USE_FILE
 
 set(ITK_DIR "@ITK_DIR_CONFIG@")
 
+set(ModuleDescriptionParser_ITK_COMPONENTS "@ModuleDescriptionParser_ITK_COMPONENTS@")
+
 set(ModuleDescriptionParser_USE_SERIALIZER "@ModuleDescriptionParser_USE_SERIALIZER@")
 
 # We need to know the location of the json library for linking.  Including the
